--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Personal Files
+.credentials
+.credentials/**
+.users
+.users/**
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
